# TBConsensusAligner

./: .gitignore  LICENSE  README.md  TBConsensusAligner.xml  consensus_galaxy.py  main_galaxy.py  pyproject.toml  snp_aligner_galaxy.py
galaxy_integration/: .shed.yml
galaxy_integration/test-data/: test_G88888_k1.consensus.fasta  test_G99999.k2.consensus.fasta
tb-consensus-aligner/: meta.yaml
tb_consensus_aligner/: consensus_galaxy.py  main_galaxy.py
test-data/: snp_alignment.fasta  test_G77777.consensus.fasta  test_Galaxy_multiple_depths_header.tabular  test_reference_200bp.reference.fasta  test_regions_blindspots_modlin_farhat_and_PE_PPE_PGRS.bed
